[package]
name = "bevy-progressbar"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Create multi sectons progressbars and use them in the bevy ui"
repository = "https://github.com/tecbeast42/bevy-progressbar"
documentation = ""
readme = "README.md"
keywords = ["gamedev", "progressbar", "ui", "bevy_ui"]
categories = ["game-development"]
exclude = [".github/*", "./example.gif"]

[dependencies]
bevy_app = "0.15"
bevy_color = "0.15"
bevy_asset = "0.15"
bevy_ecs = "0.15"
bevy_render = "0.15"
bevy_ui = "0.15"
bevy_reflect = "0.15"
bevy_utils = "0.15"

[dev-dependencies]
bevy = { version = "0.15", features = ["bevy_dev_tools"] }
